# llm_adapter

./: .gitignore  README.md  config.py  cryptodataconnector.py  dlt_haystack.py  langchain_adapter.py  llm_adapter.py  main.py  pyproject.toml  vectorstore_manager.py
.dlt/: .sources
demo/: .env.example  main.py  pyproject.toml  utils.py  vectorstore_manager.py
demo/.data/: sample_data.jsonl
demo/.dlt/: config.toml
