[tool.poetry]
name = "dltlangchain"
version = "0.0.1"
description = "Dlt production sources to Langchain"
authors = ["Vasilije  <8619304+Vasilije1990@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dlt = {version = "0.3.25", extras = ["duckdb"]}
langchain = "^0.0.338"
python-dotenv = "^1.0.0"
weaviate-client = "^3.25.3"
openai = "^1.3.3"
pypdf = "^3.17.1"
pdfplumber = "^0.10.3"
farm-haystack =  {version = "1.22.0", extras = ["pinecone"]}
torch = "^2.1.1"
tensorflow = "^2.15.0"
milvus-haystack = "^0.0.2"
pinecone-client = "^2.2.4"
tensorflow-io-gcs-filesystem = "0.34.0"
langchain-community = "^0.0.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
